<resources>
    <string name="app_name">UpAgain</string>
    <string name="shop">Shop</string>
    <string name="community">Community</string>
    <string name="home">Home</string>
    <string name="container">Container</string>
    <string name="profile">Profile</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup">Sign up</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="invalid_email">Invalid email</string>
    <string name="incorrect_password">Invalid password</string>
    <string name="login_success">Login successful</string>
    <string name="logout_success">Logout successful</string>
    <string name="login_footer">All rights reserved • UpAgain</string>
    <string name="login_fail">Incorrect email or password</string>
    <string name="error_not_pro">No professional account found with given credentials</string>
    <string name="placeholder_search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="inventory_summary">Inventory Summary</string>
    <string name="financial_overview">Financial Overview</string>
    <string name="stock" translatable="false">Stock</string>
    <string name="sold">Sold</string>
    <string name="total_spent">TOTAL SPENT</string>
    <string name="total_purchases">TOTAL PURCHASES</string>
    <string name="paid_purchases">PAID PURCHASES</string>
    <string name="free_purchases">FREE PURCHASES</string>
    <string name="spending_by_material">Spending by material</string>
    <string name="time_24h">24h</string>
    <string name="time_7d">7d</string>
    <string name="time_30d">30d</string>
    <string name="time_year">Year</string>
    <string name="my_transactions">My Transactions</string>
    <string name="item_title" translatable="false">%1$s</string>
    <string name="item_price" translatable="false">%1$f</string>
    <string name="material_wood">Wood</string>
    <string name="material_metal">Metal</string>
    <string name="material_textile">Textile</string>
    <string name="material_glass">Glass</string>
    <string name="material_plastic">Plastic</string>
    <string name="material_mixed">Mixed</string>
    <string name="material_other">Other</string>
    <string name="free">Free</string>
    <string name="filter_most_like">Most liked</string>
    <string name="filter_most_view">Most viewed</string>
    <string name="category_tutorial">Tutorials</string>
    <string name="category_project">Projects</string>
    <string name="category_tips">Tips</string>
    <string name="category_news">News</string>
    <string name="category_case_study">Case studies</string>
    <string name="category_other">Others</string>
    <string name="img_thumbnail_description">Thumbnail image</string>
    <string name="img_description">An image</string>
    <string name="btn_load_more">Load more</string>
    <string name="btn_view">View</string>
    <string name="author_dynamic">by %1$s</string>
    <string name="string_dynamic" translatable="false">%1$s</string>
    <string name="date_dynamic" translatable="false">%1$s</string>
    <string name="count_dynamic" translatable="false">%1$d</string>
    <string name="float_dynamic" translatable="false">%1$.2f</string>
    <string name="sponsored">Sponsored</string>
    <string name="no_posts_found">No posts found</string>
    <string name="no_posts_description">Try adjusting your filters or active keyword queries.</string>
    <string name="hint_write_comment">Write a comment…</string>
    <string name="post_details">Post Details</string>
    <string name="comment_count">Comments (%1$d)</string>
    <string name="no_comments_found">No comments</string>
    <string name="no_comments_description">Be the first to share your opinion!</string>
    <string name="project_steps">Project Steps</string>
    <string name="items_used">Items used</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_book_ad">Book ads</string>
    <string name="btn_cancel_ad">Cancel ads</string>
    <string name="no_steps_found">No steps</string>
    <string name="no_steps_description">This project is still ongoing!</string>
    <string name="post_saved">Saved posts</string>
    <string name="no_saved_posts_description">Your saved posts will appear here.</string>
    <string name="post_me">My posts</string>
    <string name="btn_reorder">Reorder</string>
    <string name="no_my_posts_description">Your posts will appear here.</string>
    <string name="post_new">New post</string>
    <string name="post_title">Title</string>
    <string name="post_content">Content</string>
    <string name="image_upload_hint">Tap to upload images</string>
    <string name="publish">Publish</string>
    <string name="invalid_title">Invalid title</string>
    <string name="invalid_content">Invalid content</string>
    <string name="images">Images</string>
    <string name="code">6-digit code</string>
    <string name="code_hint">000000</string>
    <string name="barcode">Barcode</string>
    <string name="container_id">Container ID</string>
    <string name="barcode_upload_hint">Tap to upload barcode</string>
    <string name="container_desc">Enter the 6-digit security code or upload the provided barcode to open the container.</string>
    <string name="container_how_to">You can find the code and ID on the transaction details page.</string>
    <string name="btn_open_container">Submit &amp; Open</string>
    <string name="invalid_digit_code">Invalid code</string>
    <string name="invalid_container_id">Invalid container ID</string>
    <string name="only_one_method">Please choose only one method (Enter code OR upload barcode)</string>
    <string name="no_method_chosen">Please enter a 6-digit code or upload a barcode image</string>
    <string name="error_404">404</string>
    <string name="error_500">500</string>
    <string name="error_401_description">Unauthorized</string>
    <string name="error_403_description">Forbidden</string>
    <string name="error_404_description">Page not found</string>
    <string name="error_500_description">Internal server error</string>
    <string name="error_connection_description">No internet connection</string>
    <string name="error_generic_title">Unknown error</string>
    <string name="error_401_msg">Welcome stranger, please log in first to continue.</string>
    <string name="error_403_msg">Oops! You are wandering into the forbidden area of the forest.</string>
    <string name="error_404_msg">Oops! It seems nature has reclaimed this path. Let\'s get back on track.</string>
    <string name="error_500_msg">Oops! Our servers are currently very busy. We are doing everything we can to resolve the problem as quickly as possible.</string>
    <string name="error_connection_msg">Oops! Your connection was interrupted. Please check your signal and try again to continue your journey.</string>
    <string name="error_generic_msg">Oops! Something went wrong. Please check your connection and try again later.</string>
    <string name="exception_message">An error occurred</string>
    <string name="error_media_msg">Failed to load media</string>
    <string name="invalid_request_body">Invalid request body</string>
    <string name="no_browser">No browser found</string>
    <string name="err_save_post_msg">Failed to save post</string>
    <string name="err_like_post_msg">Failed to like post</string>
    <string name="err_create_comment_msg">Failed to post a comment</string>
    <string name="err_like_comment_msg">Failed to like comment</string>
    <string name="err_delete_comment_msg">Failed to delete comment</string>
    <string name="err_delete_post_msg">Failed to delete post</string>
    <string name="btn_home">Back to home</string>
    <string name="btn_refresh">Refresh page</string>
    <string name="btn_save">Save</string>
    <string name="btn_saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="notification">Notifications</string>
    <string name="delete_account">Delete my account</string>
    <string name="member_since">Member since</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="account_information">Account information</string>
    <string name="current_plan">CURRENT PLAN</string>
    <string name="expire_date">Expires on: %1$s</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="francais" translatable="false">Français</string>
    <string-array name="languages_array">
        <item>@string/english</item>
        <item>@string/francais</item>
    </string-array>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="invalid_username">Invalid username</string>
    <string name="security_description">Update Credentials</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="noti_description">Update Preferences</string>
    <string name="confirm_del_account">Delete account permanently?</string>
    <string name="confirm_del_post">Delete post permanently?</string>
    <string name="confirm_message">This action is permanent and cannot be undone.</string>
    <string name="confirm_del_step">Delete step permanently?</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="book_ads_title">Book an ads</string>
    <string name="start_date">Start date</string>
    <string name="duration">Duration</string>
    <string name="base_price">Base price</string>
    <string name="vat">VAT (20%)</string>
    <string name="processing_fee">Processing fee</string>
    <string name="total_price">Total price</string>
    <string name="invalid_date">Invalid date</string>
    <string name="select_start_date">Select start date</string>
    <string name="month">Month(s)</string>
    <string name="snack_email_update_success">Email updated</string>
    <string name="snack_email_update_fail">Email update failed: %1$s</string>
    <string name="snack_account_details_update_success">Account details updated</string>
    <string name="snack_account_details_update_fail">Account details update failed: %1$s</string>
    <string name="snack_account_delete_success">Account deleted</string>
    <string name="snack_account_delete_fail">Account deletion failed: %1$s</string>
    <string name="snack_password_update_success">Password updated</string>
    <string name="snack_password_update_fail">Password update failed: %1$s</string>
    <string name="snack_avatar_update_success">Avatar updated</string>
    <string name="snack_avatar_update_fail">Avatar update failed: %1$s</string>
    <string name="snack_container_open_success">Container unlocked</string>
    <string name="snack_container_open_fail">Failed to open container: %1$s</string>
    <string name="snack_create_post_fail">Failed to create post: %1$s</string>
    <string name="snack_create_post_success">Post created</string>
    <string name="snack_delete_post_success">Post deleted</string>
    <string name="snack_delete_post_fail">Failed to delete post: %1$s</string>
    <string name="snack_delete_step_fail">Failed to delete step: %1$s</string>
    <string name="snack_get_ads_price_fail">Failed to get ads price: %1$s</string>
    <string name="snack_create_ads_fail">Failed to create ads: %1$s</string>
    <string name="snack_create_ads_success">Ads created</string>
    <string name="snack_payment_verification_fail">Failed to verify payment: %1$s</string>
    <string name="edit_post">Edit Post</string>
</resources>