<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ShopFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background"
        app:elevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_lg">

            <TextView
                android:id="@+id/tv_shop_title"
                style="@style/TextAppearance.UpAgain.H1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:textColor="@color/color_on_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/shop_history"
                android:layout_width="@dimen/min_touch"
                android:layout_height="@dimen/min_touch"
                android:padding="@dimen/space_sm"
                android:scaleType="centerInside"
                android:src="@drawable/ic_history"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/my_transactions"
                app:tint="@color/color_secondary" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_lg"
            android:hint="@string/placeholder_search"
            app:boxBackgroundColor="@color/color_on_background"
            app:boxCornerRadiusBottomEnd="@dimen/input_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_radius"
            app:boxCornerRadiusTopStart="@dimen/input_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="1dp"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/space_lg"
            android:paddingVertical="@dimen/space_md"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_materials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_on_background"
                    android:text="@string/material_wood"
                    app:chipBackgroundColor="@color/color_surface" />
                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_textile"
                    android:textColor="@color/color_on_background"
                    app:chipBackgroundColor="@color/color_surface" />
                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_glass"
                    android:textColor="@color/color_on_background"
                    app:chipBackgroundColor="@color/color_surface" />
                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_metal"
                    android:textColor="@color/color_on_background"
                    app:chipBackgroundColor="@color/color_surface" />
                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_plastic"
                    android:textColor="@color/color_on_background"
                    app:chipBackgroundColor="@color/color_surface" />
                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_mixed"
                    android:textColor="@color/color_on_background"
                    app:chipBackgroundColor="@color/color_surface" />
                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_other"
                    android:textColor="@color/color_on_background"
                    app:chipBackgroundColor="@color/color_surface" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_shop_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/space_md"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_shop_card"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>